--- a/WebApp/src/app/features/administrative/ecommerce-platform/ecommerce-platform.component.html
+++ b/WebApp/src/app/features/administrative/ecommerce-platform/ecommerce-platform.component.html
@@ -1,86 +1,98 @@
 <div class="p-card">
 
-  <div class="me-auto">
-    <div class="p-card-title ">
-      <span class="pi pi-ecommercePlatforms"> </span> Ecommerce Platform
-    </div>
-    <div class="p-card-body">
-      <!-- ********** start card body ******************** -->
-
-      <div class="card">
-        <div class="grid mb-2">
-          <button class="pi pi-plus risBtn risAdd mr-2" (click)="showBasicDialog()"> New</button>
-          <button class="pi pi-pencil risBtn risEdit mr-2" (click)="loadEcommercePlatformToEdit()"> Edit</button>
-          <button class="pi pi-trash risBtn risDelete mr-2" (click)="showDialog()"> Delete</button>
+    <div class="me-auto">
+        <div class="p-card-title ">
+            <span class="pi pi-ecommercePlatforms"> </span> Ecommerce Platform
         </div>
+        <div class="p-card-body">
+            <!-- ********** start card body ******************** -->
 
-        <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
-          <p>Do you want to delete this record?</p>
-          <ng-template pTemplate="footer">
-            <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
-            <button class="pi pi-check risBtn risSave" (click)="deleteEcommercePlatformInfo()"> Yes</button>
-          </ng-template>
-        </p-dialog>
-
-        <div class="card-body">
-          <p-dialog header="ecommercePlatform" [(visible)]="displayBasic" [draggable]="true" [resizable]="false" [style]="{width: '40vw'}">
-            <form action="" [formGroup]="ecommercePlatformForm">
-              <div class="">
-
-                <div class="p-fluid grid col-12">
-                  <div class="col-4 mt-2 text-right">
-                    <label for="" class=" d-none d-md-inline-flex">Name <span class="req">*</span> :</label>
-                  </div>
-                  <div class="col-8 p-fluid">
-                    <span class="p-float-label">
-                      <input id="float-input p-fluid" formControlName="ecommerce_paltforms_name" type="text" placeholder="Ecommerce Paltforms Name" pInputText autocomplete="off">
-                    </span>
-                  </div>
+            <div class="card">
+                <div class="grid mb-2">
+                    <button class="pi pi-plus risBtn risAdd mr-2" (click)="showBasicDialog()"> New</button>
+                    <button class="pi pi-pencil risBtn risEdit mr-2" (click)="loadEcommercePlatformToEdit()"> Edit</button>
+                    <button class="pi pi-trash risBtn risDelete mr-2" (click)="showDialog()"> Delete</button>
                 </div>
-                <div class="p-fluid grid col-12">
-                  <div class="col-4 mt-2 text-right">
-                    <label for="" class=" d-none d-md-inline-flex">Remarks: </label>
 
-                  </div>
-                  <div class="col-8 p-fluid">
-                    <span class="p-float-label">
-                      <input id="float-input p-fluid" formControlName="remarks" type="text" placeholder="Remarks" pInputText>
-                    </span>
-                  </div>
+                <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
+                    <p>Do you want to delete this record?</p>
+                    <ng-template pTemplate="footer">
+                        <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
+                        <button class="pi pi-check risBtn risSave" (click)="deleteEcommercePlatformInfo()"> Yes</button>
+                    </ng-template>
+                </p-dialog>
+
+                <div class="card-body">
+                    <p-dialog header="ecommercePlatform" [(visible)]="displayBasic" [draggable]="true" [resizable]="false" [style]="{width: '40vw'}">
+                        <form action="" [formGroup]="ecommercePlatformForm">
+                            <div class="">
+                                <div class="p-fluid grid col-12">
+                                    <div class="col-4 mt-2 text-right">
+                                        <label for="" class=" d-none d-md-inline-flex">Country <span class="req">*</span> :</label>
+                                    </div>
+                                    <div class="col-8 p-fluid">
+                                        <span class="p-float-label">
+                                            <p-dropdown [options]="allCountry" [(ngModel)]="selectedCountry" formControlName="country_id" placeholder="Select Country"
+                                                        optionLabel="country_name" optionValue="country_id" [showClear]="true" [filter]="true" filterBy="country_name"></p-dropdown>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="p-fluid grid col-12">
+                                    <div class="col-4 mt-2 text-right">
+                                        <label for="" class=" d-none d-md-inline-flex">Name <span class="req">*</span> :</label>
+                                    </div>
+                                    <div class="col-8 p-fluid">
+                                        <span class="p-float-label">
+                                            <input id="float-input p-fluid" formControlName="ecommerce_paltforms_name" type="text" placeholder="Ecommerce Paltforms Name" pInputText autocomplete="off">
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="p-fluid grid col-12">
+                                    <div class="col-4 mt-2 text-right">
+                                        <label for="" class=" d-none d-md-inline-flex">Remarks: </label>
+
+                                    </div>
+                                    <div class="col-8 p-fluid">
+                                        <span class="p-float-label">
+                                            <input id="float-input p-fluid" formControlName="remarks" type="text" placeholder="Remarks" pInputText>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        <ng-template pTemplate="footer">
+                            <button type="submit" class="pi pi-save risBtn risSave" (click)="onFormSubmit()"> Save</button>
+                            <button class="pi pi-times risBtn risClose" (click)="displayBasic=false"> Close</button>
+                        </ng-template>
+                    </p-dialog>
+                    <!-- ************************start grid ************************ -->
+                    <p-table [value]="ecommercePlatforms" dataKey="ecommerce_paltforms_id" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedEcommercePlatform" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
+                             currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Ecommerce Platform Name</th>
+                                <th>Country</th>
+                                <th>Remarks</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-ecommercePlatform>
+
+                            <tr [pSelectableRow]="ecommercePlatform">
+                                <td>{{ecommercePlatform.ecommerce_paltforms_name}}</td>
+                                <td>{{ecommercePlatform.country_name}}</td>
+                                <td>{{ecommercePlatform.remarks}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+
                 </div>
-              </div>
-            </form>
-            <ng-template pTemplate="footer">
-              <button type="submit" class="pi pi-save risBtn risSave" (click)="onFormSubmit()"> Save</button>
-              <button class="pi pi-times risBtn risClose" (click)="displayBasic=false"> Close</button>
-            </ng-template>
-          </p-dialog>
-          <!-- ************************start grid ************************ -->
-          <p-table [value]="ecommercePlatforms" [paginator]="true" [rows]="10" styleClass="p-datatable-striped p-datatable-sm" [showCurrentPageReport]="true" selectionMode="single" [(selection)]="selectedEcommercePlatform" dataKey="ecommerce_paltforms_name"
-                   currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]">
 
-            <ng-template pTemplate="header">
-              <tr>
-                <th>Ecommerce Platform Name</th>
-                <th>Remarks</th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-ecommercePlatform>
+                <!-- ********** end card body ******************** -->
 
-              <tr (click)="selectRow(ecommercePlatform)" [pSelectableRow]="ecommercePlatform">
-                <td>{{ecommercePlatform.ecommerce_paltforms_name}}</td>
-                <td>{{ecommercePlatform.remarks}}</td>
-              </tr>
-            </ng-template>
-          </p-table>
-
+            </div>
         </div>
-
-        <!-- ********** end card body ******************** -->
-
-      </div>
     </div>
-  </div>
 </div>
 
 
