Supplier master page Error free

--- a/WebApp/src/app/features/administrative/association/association.component.html
+++ b/WebApp/src/app/features/administrative/association/association.component.html
@@ -40,7 +40,7 @@
                                 </div>
                                 <div class="p-fluid grid col-12">
                                     <div class="col-4 mt-2 text-right">
-                                        <label for="" class="d-none d-md-inline-flex">Organization <span class="req">*</span> :</label>
+                                        <label for="" class="d-none d-md-inline-flex">Organization Type <span class="req">*</span> :</label>
 
                                     </div>
                                     <div class="col-8 p-fluid">
