MFS and Document Type Test finding update

--- a/WebApp/src/app/features/administrative/bank-branch/bank-branch.component.html
+++ b/WebApp/src/app/features/administrative/bank-branch/bank-branch.component.html
@@ -2,7 +2,7 @@
 
   <div class="me-auto">
     <div class="p-card-title ">
-      <span class="pi pi-users"> Bank Branch Information</span>
+      <span class="pi pi-bankbranchs"> Bank Branch Information</span>
     </div>
     <div class="p-card-body">
       <!-- ********** start card body ******************** -->
