--- a/WebApp/src/app/features/administrative/bank/bank.component.html
+++ b/WebApp/src/app/features/administrative/bank/bank.component.html
@@ -2,7 +2,7 @@
 
     <div class="me-auto">
         <div class="p-card-title ">
-            <span class="pi pi-users"> Bank Information</span>
+            <span class="pi pi-banks"> Bank Information</span>
         </div>
         <div class="p-card-body">
             <!-- ********** start card body ******************** -->
